# beam-trigger

./: app.py  cdk.json  requirements.txt
beam_trigger/: __init__.py
lambda_code/calculate_metrics_lambda/: Dockerfile  handler.py  pyproject.toml  requirements.txt
lambda_code/create_s3_file_lambda/: handler.py
